--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAS8ev4BWen-KaQokv5o92IXDrzL5sRYX8"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAS8ev4BWen-KaQokv5o92IXDrzL5sRYX8"></script>
 
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,200italic,600italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,200italic,600italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 
   <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
